# cheese-api

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  main.cpp  task-definition.json
.github/workflows/: deploy.yml
docker/app/: Dockerfile  Dockerfile_evil  cv_algorithm.cpp  test.cpp
src/: client.go  constants.go  go.mod  go.sum  handler.go  hub.go  main.go  type.go
src/base64/: base64.go
src/face_detect/: CMakeLists.txt  cv_algorithm.cpp  cv_algorithm.hpp  main.cpp  test.cpp
src/public/: index.html
src/redis/: client.go
