cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
set(CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_library(cv_algorithm STATIC cv_algorithm.cpp)
add_executable( DisplayImage main.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries(DisplayImage cv_algorithm)
